[GTK] Building Webkit2Gtk without OpenGL fails. https://bugs.webkit.org/show_bug.cgi?id=170959

Reviewed by Žan Doberšek.

Source/WebCore:

* platform/graphics/texmap/TextureMapperGC3DPlatformLayer.cpp:
* platform/graphics/texmap/TextureMapperGC3DPlatformLayer.h:
* platform/graphics/texmap/TextureMapperPlatformLayerBuffer.h:

Source/WebKit2:

* UIProcess/gtk/HardwareAccelerationManager.cpp:
(WebKit::HardwareAccelerationManager::HardwareAccelerationManager):

Canonical link: https://commits.webkit.org/188767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216483 268f45cc-cd09-0410-ab3c-d52691b4dbfc